Added data desc

--- a/Priya_Rough_Work-for-Analysis.html
+++ b/Priya_Rough_Work-for-Analysis.html
@@ -381,9 +381,20 @@ diversity_school &lt;- readr::read_csv(&#39;https://raw.githubusercontent.com/rf
 <p>Write your data description under the header “Data description” in index.Rmd. A data description should tell the reader the source of the data, and detail the structure of the data, including variables, time frame of collection, collection methods</p>
 <div id="introduction-and-motivation" class="section level1">
 <h1>Introduction and Motivation</h1>
+<div id="data-description" class="section level2">
+<h2>Data Description</h2>
+<p>It is through data collection that a business or management has the quality information they need to make informed decisions from further analysis, study, and research. In this report, we will doing exploratory, data analysis on the topic of <a href="https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-03-10/readme.md"><strong>College tuition, diversity, and pay dataset</strong></a></p>
+<div id="source-of-the-data" class="section level3">
+<h3>Source of the Data</h3>
 </div>
-<div id="data-description" class="section level1">
-<h1>Data Description</h1>
+<div id="detail-structure-of-data" class="section level3">
+<h3>Detail Structure of Data</h3>
+<p>This data, which has been obtained through</p>
+</div>
+<div id="collection-methods" class="section level3">
+<h3>Collection Methods</h3>
+</div>
+</div>
 </div>
 
 
