--- a/Priya_Rough_Work-for-Analysis.html
+++ b/Priya_Rough_Work-for-Analysis.html
@@ -1076,18 +1076,217 @@ Public
 <li>state having character datatype denotes the State name</li>
 <li>state_code having character datatype depicts State Abbreviation</li>
 <li>type having character denotes Type: Public, private, for-profit</li>
-<li>degree_length having character datatype gives us information about the durationof the4 year or 2 year degree</li>
+<li>degree_length having character datatype gives us information about the duration of the 4 year or 2 year degree</li>
+<li>room_and_board having double datatype which denote Room and board in USD</li>
+<li>in_state_tuition having double datatype depicts the Tuition fee for in-state residents in USD</li>
+<li>out_of_state_tuition double Tuition for out-of-state residents in USD</li>
 </ul>
-<div id="source-of-the-data" class="section level3">
-<h3>Source of the Data</h3>
-<p>The origin of this data set is US Department of Education.</p>
+<pre class="r"><code>glimpse(tuition_cost)</code></pre>
+<pre><code>## Rows: 2,973
+## Columns: 10
+## $ name                 &lt;chr&gt; &quot;Aaniiih Nakoda College&quot;, &quot;Abilene Christian U...
+## $ state                &lt;chr&gt; &quot;Montana&quot;, &quot;Texas&quot;, &quot;Georgia&quot;, &quot;Minnesota&quot;, &quot;C...
+## $ state_code           &lt;chr&gt; &quot;MT&quot;, &quot;TX&quot;, &quot;GA&quot;, &quot;MN&quot;, &quot;CA&quot;, &quot;CO&quot;, &quot;NY&quot;, &quot;NY&quot;...
+## $ type                 &lt;chr&gt; &quot;Public&quot;, &quot;Private&quot;, &quot;Public&quot;, &quot;For Profit&quot;, &quot;...
+## $ degree_length        &lt;chr&gt; &quot;2 Year&quot;, &quot;4 Year&quot;, &quot;2 Year&quot;, &quot;2 Year&quot;, &quot;4 Yea...
+## $ room_and_board       &lt;dbl&gt; NA, 10350, 8474, NA, 16648, 8782, 16030, 11660...
+## $ in_state_tuition     &lt;dbl&gt; 2380, 34850, 4128, 17661, 27810, 9440, 38660, ...
+## $ in_state_total       &lt;dbl&gt; 2380, 45200, 12602, 17661, 44458, 18222, 54690...
+## $ out_of_state_tuition &lt;dbl&gt; 2380, 34850, 12550, 17661, 27810, 20456, 38660...
+## $ out_of_state_total   &lt;dbl&gt; 2380, 45200, 21024, 17661, 44458, 29238, 54690...</code></pre>
+<ol start="5" style="list-style-type: decimal">
+<li>Tuition Income</li>
+</ol>
+<p>The tuition income has been obtained from the dataset <a href="https://www.tuitiontracker.org/">Tution Tracker</a> and <a href="https://priceonomics.com/ranking-the-most-and-least-diverse-colleges-in/">Priceconomics</a></p>
+<table class="table table-hover table-striped" style="margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:left;">
+name
+</th>
+<th style="text-align:left;">
+state
+</th>
+<th style="text-align:right;">
+total_price
+</th>
+<th style="text-align:right;">
+year
+</th>
+<th style="text-align:left;">
+campus
+</th>
+<th style="text-align:right;">
+net_cost
+</th>
+<th style="text-align:left;">
+income_lvl
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20174
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+11475.00
+</td>
+<td style="text-align:left;">
+0 to 30,000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20174
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+11451.00
+</td>
+<td style="text-align:left;">
+30,001 to 48,000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20174
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+16229.00
+</td>
+<td style="text-align:left;">
+48_001 to 75,000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20174
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+15592.00
+</td>
+<td style="text-align:left;">
+75,001 to 110,000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20514
+</td>
+<td style="text-align:right;">
+2017
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+11668.39
+</td>
+<td style="text-align:left;">
+0 to 30,000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20514
+</td>
+<td style="text-align:right;">
+2017
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+11643.99
+</td>
+<td style="text-align:left;">
+30,001 to 48,000
+</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li>campus having character datatype depicts whether the school is On or off-campus</li>
+<li>net_cost having double datatype denotes Net-cost - average actually paid after scholarship/award</li>
+<li>income_lvl having character datatype gives u information about the Income bracket</li>
+</ul>
+<pre class="r"><code>glimpse(tuition_income)</code></pre>
+<pre><code>## Rows: 209,012
+## Columns: 7
+## $ name        &lt;chr&gt; &quot;Piedmont International University&quot;, &quot;Piedmont Internat...
+## $ state       &lt;chr&gt; &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;...
+## $ total_price &lt;dbl&gt; 20174, 20174, 20174, 20174, 20514, 20514, 20514, 20514,...
+## $ year        &lt;dbl&gt; 2016, 2016, 2016, 2016, 2017, 2017, 2017, 2017, 2017, 2...
+## $ campus      &lt;chr&gt; &quot;On Campus&quot;, &quot;On Campus&quot;, &quot;On Campus&quot;, &quot;On Campus&quot;, &quot;On...
+## $ net_cost    &lt;dbl&gt; 11475.00, 11451.00, 16229.00, 15592.00, 11668.39, 11643...
+## $ income_lvl  &lt;chr&gt; &quot;0 to 30,000&quot;, &quot;30,001 to 48,000&quot;, &quot;48_001 to 75,000&quot;, ...</code></pre>
 </div>
+<div id="cleaning-script" class="section level2">
+<h2>Cleaning script</h2>
+<p>All the information that has been gather in these different data files have been done through web scraping using the rvest library, html_nodes, html_url and creating dataset in tibble and mutating new columns and later binding rows together</p>
 <div id="detail-structure-of-data" class="section level3">
 <h3>Detail Structure of Data</h3>
-<p>This data, which has been obtained through</p>
-</div>
-<div id="collection-methods" class="section level3">
-<h3>Collection Methods</h3>
+<p>All the data has been scarped and written in csv and later, using the readr function the csv have been read.</p>
 </div>
 </div>
 </div>
