Addec  all details about the data

--- a/index.html
+++ b/index.html
@@ -663,6 +663,645 @@ All Institutions
 ## $ year         &lt;chr&gt; &quot;1985-86&quot;, &quot;1985-86&quot;, &quot;1985-86&quot;, &quot;1985-86&quot;, &quot;1985-86&quot;,...
 ## $ tuition_type &lt;chr&gt; &quot;All Constant&quot;, &quot;4 Year Constant&quot;, &quot;2 Year Constant&quot;, ...
 ## $ tuition_cost &lt;dbl&gt; 10893, 12274, 7508, 4885, 5504, 3367, 13822, 16224, 74...</code></pre>
+<ol start="3" style="list-style-type: decimal">
+<li>Salary_potential data set origins from <a href="https://www.payscale.com/college-salary-report/best-schools-by-state/bachelors/new-hampshire">Payscales</a>.</li>
+</ol>
+<table class="table table-hover table-striped" style="margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:right;">
+rank
+</th>
+<th style="text-align:left;">
+name
+</th>
+<th style="text-align:left;">
+state_name
+</th>
+<th style="text-align:right;">
+early_career_pay
+</th>
+<th style="text-align:right;">
+mid_career_pay
+</th>
+<th style="text-align:right;">
+make_world_better_percent
+</th>
+<th style="text-align:right;">
+stem_percent
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Auburn University
+</td>
+<td style="text-align:left;">
+Alabama
+</td>
+<td style="text-align:right;">
+54400
+</td>
+<td style="text-align:right;">
+104500
+</td>
+<td style="text-align:right;">
+51
+</td>
+<td style="text-align:right;">
+31
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+University of Alabama in Huntsville
+</td>
+<td style="text-align:left;">
+Alabama
+</td>
+<td style="text-align:right;">
+57500
+</td>
+<td style="text-align:right;">
+103900
+</td>
+<td style="text-align:right;">
+59
+</td>
+<td style="text-align:right;">
+45
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+The University of Alabama
+</td>
+<td style="text-align:left;">
+Alabama
+</td>
+<td style="text-align:right;">
+52300
+</td>
+<td style="text-align:right;">
+97400
+</td>
+<td style="text-align:right;">
+50
+</td>
+<td style="text-align:right;">
+15
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+Tuskegee University
+</td>
+<td style="text-align:left;">
+Alabama
+</td>
+<td style="text-align:right;">
+54500
+</td>
+<td style="text-align:right;">
+93500
+</td>
+<td style="text-align:right;">
+61
+</td>
+<td style="text-align:right;">
+30
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+Samford University
+</td>
+<td style="text-align:left;">
+Alabama
+</td>
+<td style="text-align:right;">
+48400
+</td>
+<td style="text-align:right;">
+90500
+</td>
+<td style="text-align:right;">
+52
+</td>
+<td style="text-align:right;">
+3
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+Spring Hill College
+</td>
+<td style="text-align:left;">
+Alabama
+</td>
+<td style="text-align:right;">
+46600
+</td>
+<td style="text-align:right;">
+89100
+</td>
+<td style="text-align:right;">
+53
+</td>
+<td style="text-align:right;">
+12
+</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li>rank having double datatype properties defines the potential salary rank within state</li>
+<li>name using character datatype explains the Name of school</li>
+<li>state_name having character datatype defines the state name</li>
+<li>early_career_pay having double datatype defines the estimated early career pay in USD</li>
+<li>mid_career_pay having double datatype defines the estimated mid career pay in USD</li>
+<li>make_world_better_percent having double datatype represents the percent of alumni who think they are making the world a better place -stem_percent having double datatype defines the percent of student body in science, technology, engineering and mathematics (STEM)</li>
+</ul>
+<pre class="r"><code>glimpse(salary_potential)</code></pre>
+<pre><code>## Rows: 935
+## Columns: 7
+## $ rank                      &lt;dbl&gt; 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13...
+## $ name                      &lt;chr&gt; &quot;Auburn University&quot;, &quot;University of Alaba...
+## $ state_name                &lt;chr&gt; &quot;Alabama&quot;, &quot;Alabama&quot;, &quot;Alabama&quot;, &quot;Alabama...
+## $ early_career_pay          &lt;dbl&gt; 54400, 57500, 52300, 54500, 48400, 46600,...
+## $ mid_career_pay            &lt;dbl&gt; 104500, 103900, 97400, 93500, 90500, 8910...
+## $ make_world_better_percent &lt;dbl&gt; 51, 59, 50, 61, 52, 53, 48, 57, 56, 58, 6...
+## $ stem_percent              &lt;dbl&gt; 31, 45, 15, 30, 3, 12, 27, 17, 17, 20, 8,...</code></pre>
+<ol start="4" style="list-style-type: decimal">
+<li>Tuition cost</li>
+</ol>
+<p>The Tuition cost data set is obtained from <a href="https://www.chronicle.com/article/tuition-and-fees-1998-99-through-2018-19">the Chronicle of Higher Education.</a></p>
+<table class="table table-hover table-striped" style="margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:left;">
+name
+</th>
+<th style="text-align:left;">
+state
+</th>
+<th style="text-align:left;">
+state_code
+</th>
+<th style="text-align:left;">
+type
+</th>
+<th style="text-align:left;">
+degree_length
+</th>
+<th style="text-align:right;">
+room_and_board
+</th>
+<th style="text-align:right;">
+in_state_tuition
+</th>
+<th style="text-align:right;">
+in_state_total
+</th>
+<th style="text-align:right;">
+out_of_state_tuition
+</th>
+<th style="text-align:right;">
+out_of_state_total
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+Aaniiih Nakoda College
+</td>
+<td style="text-align:left;">
+Montana
+</td>
+<td style="text-align:left;">
+MT
+</td>
+<td style="text-align:left;">
+Public
+</td>
+<td style="text-align:left;">
+2 Year
+</td>
+<td style="text-align:right;">
+NA
+</td>
+<td style="text-align:right;">
+2380
+</td>
+<td style="text-align:right;">
+2380
+</td>
+<td style="text-align:right;">
+2380
+</td>
+<td style="text-align:right;">
+2380
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Abilene Christian University
+</td>
+<td style="text-align:left;">
+Texas
+</td>
+<td style="text-align:left;">
+TX
+</td>
+<td style="text-align:left;">
+Private
+</td>
+<td style="text-align:left;">
+4 Year
+</td>
+<td style="text-align:right;">
+10350
+</td>
+<td style="text-align:right;">
+34850
+</td>
+<td style="text-align:right;">
+45200
+</td>
+<td style="text-align:right;">
+34850
+</td>
+<td style="text-align:right;">
+45200
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Abraham Baldwin Agricultural College
+</td>
+<td style="text-align:left;">
+Georgia
+</td>
+<td style="text-align:left;">
+GA
+</td>
+<td style="text-align:left;">
+Public
+</td>
+<td style="text-align:left;">
+2 Year
+</td>
+<td style="text-align:right;">
+8474
+</td>
+<td style="text-align:right;">
+4128
+</td>
+<td style="text-align:right;">
+12602
+</td>
+<td style="text-align:right;">
+12550
+</td>
+<td style="text-align:right;">
+21024
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Academy College
+</td>
+<td style="text-align:left;">
+Minnesota
+</td>
+<td style="text-align:left;">
+MN
+</td>
+<td style="text-align:left;">
+For Profit
+</td>
+<td style="text-align:left;">
+2 Year
+</td>
+<td style="text-align:right;">
+NA
+</td>
+<td style="text-align:right;">
+17661
+</td>
+<td style="text-align:right;">
+17661
+</td>
+<td style="text-align:right;">
+17661
+</td>
+<td style="text-align:right;">
+17661
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Academy of Art University
+</td>
+<td style="text-align:left;">
+California
+</td>
+<td style="text-align:left;">
+CA
+</td>
+<td style="text-align:left;">
+For Profit
+</td>
+<td style="text-align:left;">
+4 Year
+</td>
+<td style="text-align:right;">
+16648
+</td>
+<td style="text-align:right;">
+27810
+</td>
+<td style="text-align:right;">
+44458
+</td>
+<td style="text-align:right;">
+27810
+</td>
+<td style="text-align:right;">
+44458
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Adams State University
+</td>
+<td style="text-align:left;">
+Colorado
+</td>
+<td style="text-align:left;">
+CO
+</td>
+<td style="text-align:left;">
+Public
+</td>
+<td style="text-align:left;">
+4 Year
+</td>
+<td style="text-align:right;">
+8782
+</td>
+<td style="text-align:right;">
+9440
+</td>
+<td style="text-align:right;">
+18222
+</td>
+<td style="text-align:right;">
+20456
+</td>
+<td style="text-align:right;">
+29238
+</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li>name which has character datatype which represent the School name</li>
+<li>state having character datatype denotes the State name</li>
+<li>state_code having character datatype depicts State Abbreviation</li>
+<li>type having character denotes Type: Public, private, for-profit</li>
+<li>degree_length having character datatype gives us information about the duration of the 4 year or 2 year degree</li>
+<li>room_and_board having double datatype which denote Room and board in USD</li>
+<li>in_state_tuition having double datatype depicts the Tuition fee for in-state residents in USD</li>
+<li>out_of_state_tuition double Tuition for out-of-state residents in USD</li>
+</ul>
+<pre class="r"><code>glimpse(tuition_cost)</code></pre>
+<pre><code>## Rows: 2,973
+## Columns: 10
+## $ name                 &lt;chr&gt; &quot;Aaniiih Nakoda College&quot;, &quot;Abilene Christian U...
+## $ state                &lt;chr&gt; &quot;Montana&quot;, &quot;Texas&quot;, &quot;Georgia&quot;, &quot;Minnesota&quot;, &quot;C...
+## $ state_code           &lt;chr&gt; &quot;MT&quot;, &quot;TX&quot;, &quot;GA&quot;, &quot;MN&quot;, &quot;CA&quot;, &quot;CO&quot;, &quot;NY&quot;, &quot;NY&quot;...
+## $ type                 &lt;chr&gt; &quot;Public&quot;, &quot;Private&quot;, &quot;Public&quot;, &quot;For Profit&quot;, &quot;...
+## $ degree_length        &lt;chr&gt; &quot;2 Year&quot;, &quot;4 Year&quot;, &quot;2 Year&quot;, &quot;2 Year&quot;, &quot;4 Yea...
+## $ room_and_board       &lt;dbl&gt; NA, 10350, 8474, NA, 16648, 8782, 16030, 11660...
+## $ in_state_tuition     &lt;dbl&gt; 2380, 34850, 4128, 17661, 27810, 9440, 38660, ...
+## $ in_state_total       &lt;dbl&gt; 2380, 45200, 12602, 17661, 44458, 18222, 54690...
+## $ out_of_state_tuition &lt;dbl&gt; 2380, 34850, 12550, 17661, 27810, 20456, 38660...
+## $ out_of_state_total   &lt;dbl&gt; 2380, 45200, 21024, 17661, 44458, 29238, 54690...</code></pre>
+<ol start="5" style="list-style-type: decimal">
+<li>Tuition Income</li>
+</ol>
+<p>The tuition income has been obtained from the dataset <a href="https://www.tuitiontracker.org/">Tution Tracker</a> and <a href="https://priceonomics.com/ranking-the-most-and-least-diverse-colleges-in/">Priceconomics</a></p>
+<table class="table table-hover table-striped" style="margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:left;">
+name
+</th>
+<th style="text-align:left;">
+state
+</th>
+<th style="text-align:right;">
+total_price
+</th>
+<th style="text-align:right;">
+year
+</th>
+<th style="text-align:left;">
+campus
+</th>
+<th style="text-align:right;">
+net_cost
+</th>
+<th style="text-align:left;">
+income_lvl
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20174
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+11475.00
+</td>
+<td style="text-align:left;">
+0 to 30,000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20174
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+11451.00
+</td>
+<td style="text-align:left;">
+30,001 to 48,000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20174
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+16229.00
+</td>
+<td style="text-align:left;">
+48_001 to 75,000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20174
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+15592.00
+</td>
+<td style="text-align:left;">
+75,001 to 110,000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20514
+</td>
+<td style="text-align:right;">
+2017
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+11668.39
+</td>
+<td style="text-align:left;">
+0 to 30,000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Piedmont International University
+</td>
+<td style="text-align:left;">
+NC
+</td>
+<td style="text-align:right;">
+20514
+</td>
+<td style="text-align:right;">
+2017
+</td>
+<td style="text-align:left;">
+On Campus
+</td>
+<td style="text-align:right;">
+11643.99
+</td>
+<td style="text-align:left;">
+30,001 to 48,000
+</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li>campus having character datatype depicts whether the school is On or off-campus</li>
+<li>net_cost having double datatype denotes Net-cost - average actually paid after scholarship/award</li>
+<li>income_lvl having character datatype gives u information about the Income bracket</li>
+</ul>
+<pre class="r"><code>glimpse(tuition_income)</code></pre>
+<pre><code>## Rows: 209,012
+## Columns: 7
+## $ name        &lt;chr&gt; &quot;Piedmont International University&quot;, &quot;Piedmont Internat...
+## $ state       &lt;chr&gt; &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;NC&quot;, &quot;...
+## $ total_price &lt;dbl&gt; 20174, 20174, 20174, 20174, 20514, 20514, 20514, 20514,...
+## $ year        &lt;dbl&gt; 2016, 2016, 2016, 2016, 2017, 2017, 2017, 2017, 2017, 2...
+## $ campus      &lt;chr&gt; &quot;On Campus&quot;, &quot;On Campus&quot;, &quot;On Campus&quot;, &quot;On Campus&quot;, &quot;On...
+## $ net_cost    &lt;dbl&gt; 11475.00, 11451.00, 16229.00, 15592.00, 11668.39, 11643...
+## $ income_lvl  &lt;chr&gt; &quot;0 to 30,000&quot;, &quot;30,001 to 48,000&quot;, &quot;48_001 to 75,000&quot;, ...</code></pre>
+<div id="cleaning-script" class="section level2">
+<h2>Cleaning script</h2>
+<p>All the information that has been gather in these different data files have been done through web scraping using the rvest library, html_nodes, html_url and creating dataset in tibble and mutating new columns and later binding rows together</p>
+</div>
+<div id="detail-structure-of-data" class="section level2">
+<h2>Detail Structure of Data</h2>
+<p>All the data has been scraped and written in csv and later, using the readr function the csv have been read in to R environment.</p>
+</div>
 </div>
 <div id="analysis-and-findings" class="section level1">
 <h1>Analysis and findings</h1>
