--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Junhao Wang" />
 <meta name="author" content="Priya Ravindra Dingorkar" />
 
-<meta name="date" content="2020-08-21" />
+<meta name="date" content="2020-08-24" />
 
 <title>ETC5521 Assignment 1</title>
 
@@ -377,7 +377,7 @@ summary {
 <h3 class="subtitle">Your title</h3>
 <h4 class="author">Junhao Wang</h4>
 <h4 class="author">Priya Ravindra Dingorkar</h4>
-<h4 class="date">2020-08-21</h4>
+<h4 class="date">2020-08-24</h4>
 
 </div>
 
@@ -392,8 +392,18 @@ summary {
 </div>
 <div id="research-question" class="section level1">
 <h1>Research Question</h1>
-<p>Primary Question</p>
-<p>Secondary Questions</p>
+<div id="primary-question" class="section level3">
+<h3>Primary Question</h3>
+<p>How valuable is the investment in education among America universities? Since tuition fee is relatively high for most students, or their families,value for money is of great concern. This question is to decover how highly valued are the tuition fees among universities in America.</p>
+</div>
+<div id="secondary-questions" class="section level3">
+<h3>Secondary Questions</h3>
+<ul>
+<li>How does the tution fee vary across the different types of intistutions? This information can be drawn from tuition cost, and can give a point of view of the American education system.</li>
+<li>What is the ratio of net-cost to total cost among America universities? This can show how much burden a student has taken.</li>
+<li>How is student’s career development among America universities? This information can be drawn from salary_potential, if middle-career pay differ a lot from early-career pay, then we believe there is a well career development in that university.</li>
+</ul>
+</div>
 </div>
 <div id="data-description" class="section level1">
 <h1>Data description</h1>
